# press-command

./: .gitignore  .mxproject  CMakeLists.txt  arm-none-eabi-toolchain.cmake  press-command.ioc
Core/Inc/: i2c.h  main.h
Core/Src/: gpio.c  i2c.c  main.c  usart.c
EWARM/: Project.eww  press-command.ewd  press-command.ewp
cmake/stm32cubemx/: CMakeLists.txt
